# shaka-scheme

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  MakefileOSX  Parser.h  README.md  ShakaSchemeCodeFormatting.xml  String.h  TypeVisitor.h  doxygen_config_file  doxygen_config_file_tests  main.cpp  object_test.cpp  test-precompheader.cpp  test-sexp.cpp  test.cpp  union_variant.cpp
boost-play/: AST.h  boost-qi-test.cpp  precomp-boost.h  test-AST.cpp  test.txt  test2.txt
config-cmake/dep/boost/: boost.cmake
config-cmake/dep/googletest/: googletest.cmake
dep/: .gitkeep  README.md
docs/info/: PRE_SUBMISSION_CHECKLIST.md  PreOverviewFall2017.md  README.md
dummy/: Data.h  DataNode.h  Eval_Define.h  Eval_Define_impl.h  Eval_Expression.h  Eval_PrintTree.h  Eval_Quote.h  Eval_Variable.h  Evaluator.h  IDataNode.h  IEnvironment.h  IProcedure.h  Integer.h  Procedure.h  Rational.h  Real.h  Symbol.h  Value.h  test-Complex.cpp  test-DataNode.cpp  test-DataTree-basic.cpp  test-Evaluator-Define.cpp  test-Evaluator-Expression.cpp  test-Evaluator-Quote.cpp  test-Evaluator-variable.cpp  test-Rational.cpp  test-RationalComplexInterop.cpp  test-RationalRealInterop.cpp  test-RealComplexInterop.cpp
etc/: Lambda.h  SExpression.h  main.cpp  number.txt  perfect_forwarding.cpp
parsing/: Token.h  Tokenizer.h  main.cpp
src/: ASCII_String.h  AST.h  BigInt-KyHo.h  BigInt.h  Boolean.h  Complex.cpp  Complex.h  Data.h  DataNode.h  DummyDataNode.h  DummyProcedure.h  Environment.h  Eval_Boolean.h  Eval_Boolean_impl.h  Eval_Define.h  Eval_Expression.h  Eval_Expression_impl.h  Eval_Lambda.h  Eval_Lambda_impl.h  Eval_PrintTree.h  Eval_Proc_Call.h  Eval_Proccall.h  Eval_Proccall_impl.h  Eval_ProcedureBody.h  Eval_ProcedureBody_impl.h  Eval_Quote.h  Eval_Set.h  Eval_Set_impl.h  Eval_Variable.h  Eval_Variable_impl.h  Eval_variable-anthony.h  Evaluator.h  EvaluatorStrategies.h  EvaluatorStrategyDefinitions.h  IDataNode.h  IEnvironment.h  IEvaluator.h  IEvaluatorStrategy.h  INumber.h  IProcedure.h  (+20 more)
src/core/base/: Boolean.h  Core.h  Data.h  DataList.h  DataNode.h  DataNode_impl.h  Environment.h  Environment_impl.h  Evaluator.h  IDataList.h  IEnvironment.h  IEvaluatorStrategy.h  IProcedure.h  Integer.h  NativeProcedure.h  (+15 more)
src/macro/: Eval_Macro_Substitute.h  Eval_Macro_Substitute_impl.h  Macro.h  Pattern.h  test-Macro.cpp
src/parser/: Token.h  Tokenizer.h  char_rules.h  char_rules_cdrafael.h  char_rules_string.h  logic_rules.h  parenthesis.h  parseEmail.cpp  primitives.h  repl.cpp  rule-conditional.h  rule_conditional.h  rule_conditional_impl.h  rule_define.cpp  rule_define.h  rule_define_impl.h  rule_expression.h  rule_expression_impl.h  rule_identifier.h  rule_if.h  rule_if_impl.h  rule_lambda.h  rule_lambda_impl.h  rule_list.h  rule_list_impl.h  rule_number.h  rule_number_cdrafael.h  rule_number_impl.h  rule_proc_call.h  rule_proc_call_impl.h  rule_proccall.h  rule_proccall_impl.h  rule_quote.h  rule_quote_impl.h  rule_string.h  rule_string_impl.h  rule_variable.h  rule_variable_impl.h  test-rule-tokenizer.cpp
src/repl/: main.cpp  repl.cpp
src/shaka_scheme/: shaka_scheme.hpp
src/stdproc/: Booleans_impl.h  Characters_impl.h  EquivalencePredicates_impl.h  Numbers_Arithmetic_impl.h  Numbers_impl.h  Pairs_and_Lists_impl.h  Strings_impl.h
test/: test.cpp
tests/: README.md  posix-test-all.sh  test-ASCII_String-basic.cpp  test-BigInt.cpp  test-Boolean.cpp  test-Complex.cpp  test-DataNode-Quote.cpp  test-DataNode-atasato.cpp  test-DataNode-jsome635.cpp  test-DataNode-plemus.cpp  test-DataNode.cpp  test-DataNode.out  test-DataNode2.cpp  test-Environment-KyHo.cpp  test-Environment-anthony.cpp  test-Environment-atasato.cpp  test-Environment-kasey.cpp  test-Environment-troy.cpp  test-Environment.cpp  test-Equivalence-Predicates.cpp  test-Evaluator-Boolean.cpp  test-Evaluator-Define.cpp  test-Evaluator-Expression.cpp  test-Evaluator-Lambda.cpp  test-Evaluator-Proccall.cpp  test-Evaluator-Set.cpp  test-Evaluator-basic.cpp  test-Evaluator-quote.cpp  test-Evaluator-variable-anthony.cpp  test-Evaluator-variable.cpp  test-IntegerComplexInterop.cpp  test-IntegerRationalInterop.cpp  test-IntegerRealInterop.cpp  test-Native-Procedure.cpp  test-Number-troy.cpp  test-Numbers-cdrafael.cpp  test-Parser-List-Expression.cpp  test-Parser-List.cpp  test-Parser-Rule-char_rules-string.cpp  test-Parser-Rule-char_rules.cpp  (+38 more)
tests-docs/: README.md
tests/failing/: test-Parser-Rule-integer.cpp
tests/parsing-test-files/: read_digit.txt
tst/: CMakeLists.txt  basic-tests.cpp
tst/shaka_scheme/: CMakeLists.txt
tst/shaka_scheme/runtime/: CMakeLists.txt  unit-BooleanProcedures.cpp  unit-EquivalencePredicates.cpp  unit-NumberProcedures.cpp  unit-pairs_and_lists.cpp
tst/shaka_scheme/system/: CMakeLists.txt
tst/shaka_scheme/system/base/: CMakeLists.txt  unit-BigInteger.cpp  unit-Bytevector.cpp  unit-Character.cpp  unit-Data.cpp  unit-DataPair.cpp  unit-Environment.cpp  unit-Number.cpp  unit-PrimitiveFormMarker.cpp  unit-Symbol.cpp  unit-Vector.cpp
tst/shaka_scheme/system/core/: CMakeLists.txt  unit-core-lists.cpp  unit-core-strings.cpp  unit-core-symbols.cpp  unit-core-types.cpp  unit-core-vectors.cpp
tst/shaka_scheme/system/exceptions/: CMakeLists.txt  unit-BaseException.cpp
tst/shaka_scheme/system/gc/: CMakeLists.txt  unit-GC.cpp  unit-GCData.cpp  unit-GCInit.cpp  unit-GCList.cpp  unit-GCMark.cpp  unit-GCMarkAccumulator.cpp  unit-GCMarkEnvironment.cpp  unit-GCMarkExpression.cpp  unit-GCMarkValueRib.cpp  unit-GCNode.cpp
tst/shaka_scheme/system/lexer/: CMakeLists.txt  unit-Lexer.cpp  unit-LexerInput.cpp  unit-Tokenizer.cpp
tst/shaka_scheme/system/lexer/rules/: CMakeLists.txt  EXAMPLE-rule-token.cpp  EXAMPLE-scheme-lexer.cpp  unit-rule-boolean.cpp  unit-rule-character.cpp  unit-rule-comment.cpp  unit-rule-identifier.cpp  unit-rule-lexer.cpp  unit-rule-number.cpp  unit-rule-string.cpp  unit-rule-token.cpp
tst/shaka_scheme/system/parser/: CMakeLists.txt  unit-MacroContextChecker.cpp  unit-Parser.cpp
tst/shaka_scheme/system/vm/: CMakeLists.txt  unit-Closure.cpp  unit-Compiler.cpp  unit-HeapVirtualMachine.cpp
(+220 files in other folders)
